--- a/force-app/main/default/classes/DemoClass.cls
+++ b/force-app/main/default/classes/DemoClass.cls
@@ -1,5 +1,6 @@
 public with sharing class DemoClass {
     public DemoClass() {
-        System.debug('DemoClass constructor called');
+        System.debug('First');
+        System.debug('Second');
     }
 }
