added more comments

--- a/force-app/main/default/classes/DemoClass.cls
+++ b/force-app/main/default/classes/DemoClass.cls
@@ -2,5 +2,7 @@ public with sharing class DemoClass {
     public DemoClass() {
         System.debug('First');
         System.debug('Second');
+        System.debug('Third');
+        System.debug('Fourth');
     }
 }
